
        CHANGES IN spatstat.explore VERSION 3.1-0.022

OVERVIEW

    o We thank Jonatan Gonzalez for contributions.
    
    o Changed the calculation of standard errors in density.ppp and relrisk.ppp.

    o Inline arithmetic for function tables ('fv') and arrays ('fasp')

    o Standard error calculation for Smooth.ppp (experimental)
    
    o multitype pair correlation functions can save numerator and denominator.

    o multitype inhomogeneous J functions.
    
    o Bug fixes in calculation of standard errors.

NEW FUNCTIONS

    o Math.fv, Complex.fv, Summary.fv, Ops.fv
    Methods for arithmetic operations for function tables (class 'fv')
    
    o Math.fasp, Complex.fasp, Summary.fasp, Ops.fasp
    Methods for arithmetic operations for function arrays (class 'fasp')

    o Gcross.inhom, Gdot.inhom
    Multitype G functions for inhomogeneous point processes.
    
    o Jcross.inhom, Jdot.inhom, Jmulti.inhom
    Multitype J functions for inhomogeneous point processes.
    
SIGNIFICANT USER-VISIBLE CHANGES

    o density.ppp
    Standard error calculation is now available with any smoothing kernel.

    o density.ppp
    The interpretation of 'weights' in the calculation of standard error
    has changed. New argument 'wtype' controls this interpretation.
    
    o relrisk.ppp
    The interpretation of 'weights' in the calculation of standard error
    has changed. New argument 'wtype' controls this interpretation.

    o relrisk.ppp
    New argument 'fudge' specifies a constant numeric value that will be
    added to each estimate of point process intensity before calculation of
    relative risk.
    
    o Smooth.ppp
    Standard error calculation is now supported (Experimental).

    o pcfcross, pcfdot, pcfmulti
    New argument 'ratio' makes it possible to save the numerator and
    denominator of the function estimates, so that estimates can be pooled.
    
    o bw.relrisk.ppp
    Additional arguments '...' are now passed to 'density.ppp'.
