@@ -1,6 +1,6 @@
 Package: spatstat.explore
-Version: 3.1-0.022
-Date: 2023-04-10
+Version: 3.1-0.023
+Date: 2023-04-17
 Title: Exploratory Data Analysis for the 'spatstat' Family
 Authors@R: c(person("Adrian", "Baddeley", 
                     role = c("aut", "cre", "cph"),
