@@ -409,6 +409,7 @@ export("print.rho2hat")
 export("print.rhohat")
 export("print.Smoothfun")       
 export("print.ssf")
+export("print.summary.bw.optim")
 export("print.summary.ssf")
 export("qkernel")
 export("QQversion")
@@ -513,6 +514,7 @@ export("stienen")
 export("stienenSet")
 export("studpermu.test")
 export("subspaceDistance")
+export("summary.bw.optim")
 export("summary.envelope")
 export("Summary.fasp")
 export("Summary.fv")
@@ -667,6 +669,7 @@ S3method("print", "rho2hat")
 S3method("print", "rhohat")
 S3method("print", "Smoothfun")
   S3method("print", "ssf")
+S3method("print", "summary.bw.optim")
 S3method("print", "summary.ssf")
 S3method("quadrat.test", "ppp")
 S3method("quadrat.test", "quadratcount")
@@ -701,6 +704,7 @@ S3method("Smooth", "solist")
 S3method("spatialCovariateEvidence", "exactppm")
 S3method("spatialCovariateEvidence", "ppp")
  S3method("[", "ssf")
+S3method("summary", "bw.optim")
 S3method("summary", "envelope")
   S3method("summary", "ssf")
   S3method("unmark", "ssf")
